# SoaPy

./: .gitignore  README.md  pyproject.toml
src/: ad_dns_manager_adws.py  adws.py  ms_nmf.py  ms_nns.py  shadow_credentials.py  soa.py
src/encoder/records/: attributes.py  datatypes.py  elements.py  record.py  text.py
tests/: test_nmf.py
