[tool.poetry]
name = "SOAPy"
version = "0.1.0"
description = ""
authors = [
    "Logan-Goins <lgoins@specterops.io>",
    "Jackson-Leverett <jack.leverett@ibm.com>"
]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
SOAPy = "src:run_cli"

[tool.poetry.dependencies]
python = "^3.10"
impacket = ">=0.12.0"
typing-extensions = "^4.0.0"
dsinternals = "^1.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
hypothesis = "^6.103.2"
ruff = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
]

[tool.ruff.lint.pydocstyle]
convention = "google"
